Changed res/values/colors to customize the color a bit

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="black">#FF000000</color>
-    <color name="white">#FFFFFFFF</color>
+    <color name="colorPrimary">#EFD9CA</color>
+    <color name="colorPrimaryDark">#C4B2A6</color>
+    <color name="colorAccent">#FD4D3F</color>
 </resources>
